# WSkelet

./: CHANGELOG.md  WSkelet.cabal
src/: Auth.hs  Command.hs  Core.hs  Main.hs
src/Core/: App.hs  Command.hs  Env.hs  Route.hs
