cabal-version:      3.0
name:               WSkelet
version:            0.0.0.0
-- synopsis:
-- description:
license:            GPL-2.0-only
license-file:       LICENSE
author:             Niko
maintainer:         none
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable WSkelet
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.2.0
    hs-source-dirs:   src
    default-language: Haskell2010
