cabal-version:      3.0
name:               WSkelet
version:            0.0.0.0
-- synopsis:
-- description:
license:            GPL-2.0-only
license-file:       LICENSE
author:             Niko
maintainer:         none
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common options
    ghc-options:        -Wall -O3 -threaded
    default-language:   Haskell2010
    build-depends:    
                        base ^>=4.19.2.0,
    default-extensions:

executable WSkelet
    import:           options
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:
                      Auth,
                      Core,
                      Core.App,
                      Core.Env,
                      Core.Route
    -- other-extensions:
