cabal-version:      3.0
name:               WSkelet
version:            0.0.0.0
-- synopsis:
-- description:
license:            GPL-2.0-only
license-file:       LICENSE
author:             Niko
maintainer:         none
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common options
    ghc-options:        -Wall -O3 -threaded
    default-language:   Haskell2010
    build-depends:    
                        aeson,
                        base,
                        bytestring,
                        --http-types,
                        stm,
                        template-haskell,
                        text,
                        wai,
                        wai-websockets,
                        warp,
                        websockets
    default-extensions:
                        OverloadedStrings

executable WSkelet
    import:           options
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:
                      Core,
                      Core.App,
                      Core.Command,
                      Core.Env
    -- other-extensions:
